Fixed alignment of member section when screen size is decreased

--- a/css/style.css
+++ b/css/style.css
@@ -542,6 +542,7 @@ nav .fa {
   .box {
   gap: 1rem;
   padding: 2.5rem;
+  justify-items: center;
 }
 
 }
